--- a/app/app.less
+++ b/app/app.less
@@ -1,6 +1,6 @@
 body {
-  padding-top: 60px;
-  padding-bottom: 60px;
+  padding-top: 40px;
+  padding-bottom: 40px;
 }
 
 .form-signin {
@@ -36,3 +36,5 @@ body {
   border-top-left-radius: 0;
   border-top-right-radius: 0;
 }
+
+@import 'views/index/template';
