--- a/app/resources/views/auth/login/template.html
+++ b/app/resources/views/auth/login/template.html
@@ -1,4 +1,4 @@
-<div>
+<app-header></app-header>
   <div class="container">
     <validator name="validation1">
       <form novalidate class="form-signin">
@@ -18,4 +18,4 @@
       </form>
      </validator>
   </div>
-</div>
+<app-footer></app-footer>
