--- a/app/resources/views/layouts/app/navbar/template.html
+++ b/app/resources/views/layouts/app/navbar/template.html
@@ -2,7 +2,7 @@
   <nav class="navbar navbar-fixed-top navbar-dark bg-inverse">
     <a class="navbar-brand" href="#">Project name</a>
     <ul class="nav navbar-nav">
-      <li class="nav-item active">
+      <li class="nav-item">
         <a class="nav-link" v-link="{ path: '/home' }">Home <span class="sr-only">(current)</span></a>
       </li>
       <li class="nav-item">
