--- a/app/resources/views/layouts/app/navbar/template.html
+++ b/app/resources/views/layouts/app/navbar/template.html
@@ -9,16 +9,16 @@
         <a class="nav-link" v-link="{ path: '/about' }">About</a>
       </li>
 
-      <li class="nav-item" v-if="$root.auth.user.authenticated">
+      <li class="nav-item" v-if="user.authenticated">
         <a class="nav-link" v-link="{ path: '/contact' }">Contact</a>
       </li>
 
-      <li class="nav-item" v-if="!$root.auth.user.authenticated">
+      <li class="nav-item" v-if="!user.authenticated">
         <a class="nav-link" v-link="{ path: '/login' }">Login/Register</a>
       </li>
 
-      <li class="nav-item" v-if="$root.auth.user.authenticated">
-        <a class="nav-link" v-link="{ path: '/contact' }" @click="logout()">Logout</a>
+      <li class="nav-item" v-if="user.authenticated">
+        <a class="nav-link" href="#logout" @click="logout()">Logout</a>
       </li>
     </ul>
   </nav>
