--- a/app/resources/views/pages/home/template.html
+++ b/app/resources/views/pages/home/template.html
@@ -1,7 +1,7 @@
 <app-header></app-header>
   <div class="container">
     <div class="jumbotron">
-      <h1 class="display-3">Jumbotron heading</h1>
+      <h1 class="display-3">{{page}}</h1>
       <p class="lead">Cras justo odio, dapibus ac facilisis in, egestas eget quam. Fusce dapibus, tellus ac cursus commodo, tortor mauris condimentum nibh, ut fermentum massa justo sit amet risus.</p>
       <p><a class="btn btn-lg btn-success" href="#" role="button">Sign up today</a></p>
     </div>
@@ -30,4 +30,4 @@
       </div>
     </div>
   </div>
-<app-footer></app-footer>  
+<app-footer></app-footer>
