--- a/resources/assets/less/app.less
+++ b/resources/assets/less/app.less
@@ -1,6 +1,22 @@
+html {
+  position: relative;
+  min-height: 100%;
+}
+
 body {
   padding-top: 40px;
   padding-bottom: 40px;
+}
+
+
+
+.footer {
+  position: absolute;
+  bottom: 0;
+  width: 100%;
+  height: 60px;
+  line-height: 60px;
+  background-color: #f5f5f5;
 }
 
 .form-signin {
