--- a/resources/views/pages/home/template.html
+++ b/resources/views/pages/home/template.html
@@ -1,4 +1,5 @@
 <app-header></app-header>
+  <seo-title :value="page"></seo-title>
   <div class="container">
     <div class="jumbotron">
       <h1 class="display-3">{{page}}</h1>
